--- a/EcoleDesLoustics/app/build.gradle
+++ b/EcoleDesLoustics/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     compile 'com.github.satyan:sugar:1.5'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.0'
+    compile 'com.google.code.gson:gson:2.7'
     testCompile 'junit:junit:4.12'
 }
